syntax = "proto3";

package seckill;
option go_package = "./pb";



message SeckillOrderReq{
  int64 uid = 1;
  int64 pid = 2;
  int64 ProductQuantity = 3;
}

message SeckillOrderResp{

}




service Seckill{
  rpc SeckillOrder(SeckillOrderReq)returns(SeckillOrderResp);
}